# Palimpsest-NYC

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  logging.py  main.py
apps/api/app/agent/: __init__.py  citations.py  loop.py  walk.py
apps/api/app/agent/tools/: __init__.py  base.py  search_places.py
apps/api/app/db/: engine.py  models.py
apps/api/app/db/migrations/: 0001_init.sql  0002_places.sql  README.md
apps/api/app/embeddings/: __init__.py  embedder.py  errors.py
apps/api/app/ingest/: README.md  __init__.py  base.py  cli.py  osm.py  raw_cache.py  records.py  scope.py  upsert.py  wikipedia.py
apps/api/app/llm/: __init__.py  adapters.py  cache.py  models.py  router.py  telemetry.py
apps/api/app/meta/: __init__.py  cli.py  session_log.py
apps/api/app/routes/: __init__.py  agent.py  health.py  llm.py  meta.py
apps/api/tests/: test_agent_citations.py  test_agent_loop.py  test_agent_search_places.py  test_agent_tools_base.py  test_agent_walk.py  test_db_engine.py  test_db_models.py  test_embeddings.py  test_ingest_cli.py  test_ingest_osm.py  test_ingest_raw_cache.py  test_ingest_upsert.py  test_ingest_wikipedia.py  test_llm_router.py  test_provenance_citation_link.py  test_routes_agent.py  test_session_log.py
apps/web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/.playwright-cli/: page-2026-04-29T00-40-30-034Z.yml
apps/web/.tsbuildinfo-node/: vite.config.js
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: ChatPane.tsx  CitationCard.tsx  CitationList.tsx  Composer.tsx  Icon.tsx  LoadingSkeleton.tsx  MapView.tsx  NarrationStream.tsx  WalkTimeline.tsx  WarningBanner.tsx
apps/web/src/map/: MapEngine.ts  index.ts  types.ts
apps/web/src/map/engines/: GoogleTilesEngine.ts  MaplibreEngine.ts
apps/web/src/state/: MapEngineContext.tsx  sse.ts  types.ts  useAgentSession.ts
apps/web/src/styles/: tokens.ts
apps/worker/: README.md  pyproject.toml
apps/worker/worker/: __init__.py  main.py
data/: .gitkeep
docker/postgres/: Dockerfile
docker/postgres/initdb/: 001-extensions.sql
docs/: agent-2026-04-28.md  db-and-embeddings-2026-04-28.md  ingestion-2026-04-28.md  milestone-1-slides.md  milestone-1.html  project-overview.md  swap-llm-tiers-2026-04-28.md  week-1-scaffold-complete.md
docs/eval/: v1-eval-report.md  v1-router-comparison.md
docs/eval/questions/: v1-qualitative.txt  v1-router-bench.txt
docs/eval/scripts/: compare_runs.py  restore-paid.sh  run_eval.py  screenshot_walks.py  swap-to-free-model.sh
docs/frontend/: ui-design-brief.md
docs/superpowers/plans/: 2026-04-29-readme-rewrite.md
docs/superpowers/specs/: 2026-04-29-readme-rewrite-design.md
openspec/changes/initial-palimpsest-scaffold/: README.md  design.md  proposal.md  tasks.md
openspec/changes/initial-palimpsest-scaffold/specs/agent-tools/: spec.md
openspec/changes/initial-palimpsest-scaffold/specs/data-ingest/: spec.md
openspec/changes/swap-llm-tiers-and-lock-mvp-decisions/: README.md  design.md  proposal.md  tasks.md
(+8 files in other folders)
