[project]
name = "palimpsest-api"
version = "0.1.0"
description = "Palimpsest NYC — FastAPI backend, LLM router, agent loop, ingestion pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Palimpsest NYC" }]

dependencies = [
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",

  # Config / validation
  "pydantic>=2.8.0",
  "pydantic-settings>=2.5.0",

  # HTTP clients
  "httpx>=0.27.0",
  "tenacity>=9.0.0",

  # Database
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.0",
  "alembic>=1.13.0",

  # Cache / queues
  "redis>=5.0.0",

  # Observability
  "structlog>=24.4.0",

  # Utilities
  "python-multipart>=0.0.12",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
  "fakeredis>=2.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ──────────────────────────────── ruff ────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "PL",  # pylint
  "RUF", # ruff-specific
]
ignore = [
  "E501",   # line length handled by formatter
  "PLR0913",  # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101"]

# ──────────────────────────────── pytest ───────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"

# ──────────────────────────────── mypy ─────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "fakeredis.*"]
ignore_missing_imports = true
