[project]
name = "palimpsest-worker"
version = "0.1.0"
description = "Palimpsest NYC — scheduled ingestion and background tasks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

# The worker shares most of its dependencies with the api package,
# installed together in the Docker image. This project file only
# adds worker-specific deps.
dependencies = [
  "palimpsest-api",
  "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
palimpsest-api = { path = "../api", editable = true }
